tests/test-files/parse-lisp.txt
================================================================================
100 Missing expression type
================================================================================

(package test-package)

(define f (lisp))

--------------------------------------------------------------------------------

error: Malformed lisp expression
  --> test:3:15
   |
 3 |  (define f (lisp))
   |                 ^ expected expression type

================================================================================
101 Missing binding list
================================================================================

(package test-package)

(define f (lisp (T -> T)))

--------------------------------------------------------------------------------

error: Malformed lisp expression
  --> test:3:24
   |
 3 |  (define f (lisp (T -> T)))
   |                          ^ expected binding list

================================================================================
102 Missing body
================================================================================

(package test-package)

(define f (lisp (T -> T) (x y)))

--------------------------------------------------------------------------------

error: Malformed lisp expression
  --> test:3:10
   |
 3 |  (define f (lisp (T -> T) (x y)))
   |            ^^^^^^^^^^^^^^^^^^^^^ expected body
